--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,11 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-dotenv==1.0.0
-snowflake-connector-python==3.7.0
-cryptography==41.0.8
-passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.3.0
-python-multipart==0.0.6
-reportlab==4.0.8
-pydantic==2.5.0
-pydantic-settings==2.1.0
+fastapi>=0.104.1,<0.105.0
+uvicorn[standard]>=0.24.0,<0.25.0
+python-dotenv>=1.0.0,<2.0.0
+snowflake-connector-python>=3.7.0,<3.8.0
+cryptography>=41.0.0,<42.0.0
+passlib[bcrypt]>=1.7.4,<1.8.0
+python-jose[cryptography]>=3.3.0,<3.4.0
+python-multipart>=0.0.6,<0.1.0
+reportlab>=4.0.0,<4.1.0
+pydantic>=2.5.0,<2.6.0
+pydantic-settings>=2.1.0,<2.2.0
