--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]>=0.24.0,<0.25.0
 python-dotenv>=1.0.0,<2.0.0
 snowflake-connector-python>=3.7.0,<3.8.0
 passlib[bcrypt]>=1.7.4,<1.8.0
+bcrypt>=4.0.0,<5.0.0
 python-jose[cryptography]>=3.3.0,<3.4.0
 python-multipart>=0.0.6,<0.1.0
 reportlab>=4.0.0,<4.1.0
