--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ pydantic>=2.5.0,<2.6.0
 pydantic-settings>=2.1.0,<2.2.0
 httpx>=0.25.0,<0.26.0
 sqlparse>=0.4.4,<0.5.0
-python-Levenshtein>=0.21.0,<0.22.0
+rapidfuzz>=3.0.0,<4.0.0
 black>=23.3.0,<24.0.0
 isort>=5.12.0,<6.0.0
 flake8>=6.0.0,<7.0.0
